# fixed-prediction-market

./: Cargo.toml  README.md  generate-sdk.js  package-lock.json  package.json
artifacts/: checksums.txt  clp_feed.wasm  market.wasm  registry.wasm  truth_markets_contract_fixed.wasm
contracts/market/: Cargo.toml
contracts/market/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
contracts/market/tests/: integrations.rs
contracts/market/tests/helpers/: keys.rs
contracts/registry/: Cargo.toml  NOTICE
contracts/registry/src/: contract.rs  execute.rs  msg.rs  state.rs
scripts/: optimize.sh
src/: contract copy.rs  contract.rs  msg.rs  state.rs
src/contracts/market/: Cargo.toml
src/contracts/market/src/: contract.rs  msg.rs  state.rs
src/contracts/market/tests/: integrations.rs
src/contracts/registry/: Cargo.toml
src/contracts/registry/src/: contract.rs  execute.rs  msg.rs  query.rs  state.rs
src/scripts/: optimize.sh
src/types/: TruthMarketsContractFixed.types.ts  contractContextProviders.ts
tests/: mod.rs  test_market.rs
tests/multitests/schema/: truth-markets-contract-fixed.json
tests/multitests/schema/raw/: execute.json  instantiate.json  query.json  response_to_get_all_shares.json  response_to_get_market.json  response_to_get_market_stats.json  response_to_get_total_shares_per_option.json  response_to_get_total_value.json  response_to_get_user_balance.json  response_to_get_user_potential_winnings.json  response_to_get_user_winnings.json
types/: TruthMarketsContractFixed.client.ts  TruthMarketsContractFixed.provider.ts  TruthMarketsContractFixed.react-query.ts  contractContextBase.ts  contracts-context.tsx  index.ts
