[workspace]
members = ["src/contracts/registry", "src/contracts/market"]
resolver = "2"

[workspace.dependencies]
cosmwasm-schema = "2.2.0"
cosmwasm-std = { version = "2.2.0", features = ["cosmwasm_2_0"] }
cw-storage-plus = "2.0.0"
cw2 = "2.0.0"
schemars = "0.8.16"
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.58" }
coreum-wasm-sdk = "1.2.1"
tokio = { version = "1.0", default-features = false, features = [
  "sync",
  "macros",
  "io-util",
  "rt",
  "time",
] }
coreum-test-tube = "5.0.0"
cw-ownable = { version = "2.1.0" }
cw-utils = { version = "2.0.0" }
market = { path = "src/contracts/market" }
registry = { path = "src/contracts/registry" }
utils = { path = "src/packages/utils" }
sha2 = { version = "0.10.9" }


[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[workspace.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/optimizer:0.16.0
"""
