[package]
name = "registry"
version = "0.1.0"
authors = ["wanesurf <helwan.mande.1@ens.etsmtl.ca>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/optimizer:0.16.0
"""

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
cw-ownable = { workspace = true }
cw-utils = { version = "2.0.0" }
market = { workspace = true, features = ["library"] }
utils = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
cw-multi-test = "2.0.0"
coreum-test-tube = { workspace = true }
